@@ -2,12 +2,14 @@ package service.conversation;
 
 import dao.DaoFactory;
 import dao.conversation.ConversationDao;
+import dao.dto.ConversationDto;
 import lombok.SneakyThrows;
-import models.Conversation;
+import model.Conversation;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class ConversationServiceImpl implements ConversationService{
+public class ConversationServiceImpl implements ConversationService {
 
     private final ConversationDao conversationDao;
 
@@ -18,7 +20,9 @@ public class ConversationServiceImpl implements ConversationService{
 
     @Override
     public Conversation createConversation(String participant1, String participant2) {
-        return null;
+        return conversationDtoToModel(
+                conversationDao.create(new ConversationDto(null, participant1, participant2, null))
+        );
     }
 
     @Override
@@ -38,16 +42,9 @@ public class ConversationServiceImpl implements ConversationService{
                 .stream()
                 .filter(conversationDto ->
                         conversationDto.getParticipant1().equals(user)
-                        || conversationDto.getParticipant2().equals(user))
-                .map(conversationDto ->
-                        Conversation.builder()
-                                .id(conversationDto.getId())
-                                .messages(conversationDto.getMessages())
-                                .participant1(conversationDto.getParticipant1())
-                                .participant2(conversationDto.getParticipant2())
-                                .build()
-                )
-                .toList();
+                                || conversationDto.getParticipant2().equals(user))
+                .map(this::conversationDtoToModel)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -58,5 +55,14 @@ public class ConversationServiceImpl implements ConversationService{
     @Override
     public Conversation readConversation(String participant1, String participant2) {
         return null;
+    }
+
+    private Conversation conversationDtoToModel(ConversationDto conversationDto) {
+        return Conversation.builder()
+                .id(conversationDto.getId())
+                .messages(conversationDto.getMessages())
+                .participant1(conversationDto.getParticipant1())
+                .participant2(conversationDto.getParticipant2())
+                .build();
     }
 }
